--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">PassManager</string>
     <string name="title_activity_pass_list">PassList</string>
+    <string name="loginName">账号</string>
+    <string name="Auth_fail">验证失败！</string>
+    <string name="third_failed">三次错误，退出验证！</string>
+    <string name="input_then_query">输入账号密码注册，点击指纹确认！</string>
+    <string name="input_name_password">请输入账号密码！</string>
+    <string name="input_name">请输入账号！</string>
+    <string name="input_password">请输入密码！</string>
+    <string name="remenber_tip">请牢记以下密码！</string>
+    <string name="copy">⬛ 复制</string>
+    <string name="i_am_remenber">⬛ 我已记住</string>
+    <string name="copyed">已复制到剪切板！</string>
+    <string name="login_name_password_err">账号密码错误！</string>
+    <string name="click_to_login">点击指纹验证账号密码登录！</string>
+    <string name="please_accect_permission">请授予指纹权限！</string>
+    <string name="no_finger">设备还没有录入指纹！</string>
+    <string name="unlock_then_try">解锁之后再次尝试！</string>
 </resources>
