Signed-off-by: JinhaoLi <q1521983309@163.com> 2019年6月5日-例行提交

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="firstInApp">第一次请输入账号密码注册！</string>
 </resources>
