--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="i_am_remenber">⬛ 我已记住</string>
     <string name="copyed">已复制到剪切板！</string>
     <string name="login_name_password_err">账号密码错误！</string>
-    <string name="click_to_login">点击指纹验证账号密码登录！</string>
+    <string name="click_to_login">登录</string>
     <string name="please_accect_permission">请授予指纹权限！</string>
     <string name="no_finger">设备还没有录入指纹！</string>
     <string name="unlock_then_try">解锁之后再次尝试！</string>
